feat: support guest standard input and preview feature tracing
- Functional Changes:
  * App: Added --stdin and --stdin-file options to trace command, wired resolveGuestStdin(), and passed guestStdin through runBounded, executeBoundedSource, boundedPayload, runModernTrace, and runPyTutorTrace.
  * DebugTraceHelper: Added writeGuestStdin to write input bytes and close child stdin stream at VM launch, added stdin overloads for trace, traceLatest, and traceChronological, and updated startVmWithCprs to conditionally add --enable-preview.
  * DebugTraceHelper: Updated isMainMethodExit to recognize non-static and parameterless instance main methods.
  * CompilationHelper: Added detectPreviewUsage to automatically identify IO usage or instance main methods, updated buildCompilerOptions and compileFiles with previewEnabled flag, and enhanced isMainMethod to support instance main.
  * PyTutorSerializer: Added stdin parameter overloads for createTrace and serialize, and populated root stdin field in PyTutorTrace.
  * ModernTraceSerializer: Added stdin parameter overloads for createTrace and createBreakpointsTrace, and populated root stdin field in Trace.
  * Trace (Modern): Added stdin field and constructors with default fallback to empty string.

- Reference Examples / Documentation:
  * Reference Examples: Added examples/example32 demonstrating guest standard input with java.util.Scanner.
  * Reference Examples: Added examples/example33 demonstrating guest standard input with java.lang.IO preview features.
  * HACKING.md: Updated reference example count from 32 to 34 and documented Scanner and IO examples.

- Testing & Verification:
  * AppTest: Added unit tests for --stdin, --stdin-file, mutual exclusion validation, and preview features with instance main / IO.
  * PyTutorSerializerTest: Added tests covering stdin serialization and null fallbacks.
  * ModernTraceSerializerTest: Added tests covering stdin serialization and null fallbacks.
  * Verification: Successfully pass